<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="top|center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"

        android:text="@string/pick"
        android:textSize="22sp" />



    <Button
        android:id="@+id/ebayMercariButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:onClick="onClick"

        android:text="@string/ebayMercariButton"
        />

    <Button
        android:id="@+id/poshEbayButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:onClick="onClick"

        android:text="@string/poshEbayButton"   />

    <Button
        android:id="@+id/mercariPoshButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:onClick="onClick"

        android:text="@string/mercariPoshButton"
        />


    <Button
        android:id="@+id/allSitesButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:onClick="onClick"

        android:text="@string/allSitesButton" />


    <Button
        android:id="@+id/help"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="27dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/menu_help" />

    <Button
        android:id="@+id/btnPref"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="27dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/btnPref" />

    <Button
        android:id="@+id/button2"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="27dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="Click for SignUp bonus" />

</LinearLayout>